[gd_scene load_steps=4 format=2]

[ext_resource path="res://VeinNet.gd" type="Script" id=1]
[ext_resource path="res://Viruses.gd" type="Script" id=2]
[ext_resource path="res://Veins.gd" type="Script" id=3]

[node name="VeinNet" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 131.0
margin_bottom = 20.0
text = "check connections"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 131.0
margin_bottom = 44.0
text = "print connections"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viruses" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Veins" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="cut_line" type="Line2D" parent="Veins"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_check_connections"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_print_connections"]
